...
              >
              </View>
            ),
          }}
        />
        <Stack.Screen
          name="Workspace"
          component={WorkSpace}
          options={{
            headerStyle: {
              backgroundColor: "#B8B8F3",
            },
            headerTintColor: "#000",
...
